# ME3AI

.cursor/skills/audit-worktree-paths/: SKILL.md
data-pipeline/: README.md  pyproject.toml
data-pipeline/config/: forecast_revision.json  reputation_measure.json  spf_clean.json  spf_download.json
data-pipeline/input/: Dispersion_CPI.xlsx  Dispersion_CPI10.xlsx  Individual_CPI.xlsx  Individual_CPI10.xlsx  Mean_CPI10_Level.xlsx  Mean_CPI_Level.xlsx  Median_CPI10_Level.xlsx  Median_CPI_Level.xlsx
data-pipeline/report/: codebook.html  codebook.qmd
data-pipeline/scripts/: adjust_spf_cpi10.py  clean_spf.py  construct_spf_inflation_news.py  construct_spf_regression_dataset.py  construct_spf_reputation_measure.py  download_spf.py  run_spf_forecast_revision_regressions.py
data-pipeline/src/: spf_adjust.py  spf_clean.py  spf_download.py  spf_regression.py
data-pipeline/tests/: test_codebook.py  test_spf_adjust.py  test_spf_download.py  test_spf_regression.py
docs/draft/: 2025OctVersion.tex
docs/source_of_truth/: spf_dataset_construction.aux  spf_dataset_construction.fdb_latexmk  spf_dataset_construction.fls  spf_dataset_construction.tex
docs/template/: prompt_improver_skill.md
replication/: README.md  replicate_figure.py
replication/compare2data-pipeline/: compare_series.py  comparison_note.html  comparison_note.qmd  comparison_note.txt  long_term_forecast_revision_comparison.csv  long_term_forecast_revision_continuing_comparison.csv  regressor_1_comparison.csv  reputation_input_comparison.csv
replication/rawdata/: Individual_CPI.xlsx  Individual_CPI10.xlsx
(+3 files in other folders)
