[project]
name = "data-pipeline-exercise"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.0.7",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "ipykernel>=7.2.0",
    "tabulate>=0.10.0",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
